--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+dvpn-node-manager (1.1-1) unstable; urgency=medium
+	* Updated dVPN Node Manager script package.
+	* Fixed various bugs and issues.
+	* Added support for wallets protected by a passphrase.
+ -- FoxinouFr <foxinou@foxinodes.net>  Mon, 17 May 2024 09:00:00 +0000
+
 dvpn-node-manager (1.0-1) unstable; urgency=low
 
   * Initial release of the dVPN Node Manager script package.
