--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+dvpn-node-manager (1.3-1) unstable; urgency=medium
+
+- Changing docker commands to launch a wallet protected by a passphrase
+
+-- FoxinouFr <foxinou@foxinodes.net> Mon, 17 Apr 2024 11:00:00 +0000
+
 dvpn-node-manager (1.2-1) unstable; urgency=medium
 
 - Fix package uninstall script to execute `dvpn-node-manager uninstall force` command.
